实现数据集接口契约与模板字典接口